// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add exclude 1`] = `
{
  "$schema": "https://json.schemastore.org/tsconfig",
  "exclude": [
    "**/*.test.ts",
  ],
}
`;

exports[`add file 1`] = `
{
  "$schema": "https://json.schemastore.org/tsconfig",
  "files": [
    "test.js",
  ],
}
`;

exports[`add include 1`] = `
{
  "$schema": "https://json.schemastore.org/tsconfig",
  "include": [
    "**/*.ts",
  ],
}
`;

exports[`add reference 1`] = `
{
  "$schema": "https://json.schemastore.org/tsconfig",
  "references": [
    {
      "path": "test",
    },
  ],
}
`;

exports[`dedupes files 1`] = `
{
  "$schema": "https://json.schemastore.org/tsconfig",
  "files": [
    "a.ts",
  ],
}
`;

exports[`dedupes references 1`] = `
{
  "$schema": "https://json.schemastore.org/tsconfig",
  "references": [
    {
      "path": "a",
    },
  ],
}
`;

exports[`defaults 1`] = `
{
  "$schema": "https://json.schemastore.org/tsconfig",
}
`;

exports[`sorts files 1`] = `
{
  "$schema": "https://json.schemastore.org/tsconfig",
  "files": [
    "a.ts",
    "b.ts",
  ],
}
`;

exports[`sorts references 1`] = `
{
  "$schema": "https://json.schemastore.org/tsconfig",
  "references": [
    {
      "path": "a",
    },
    {
      "path": "b",
    },
  ],
}
`;

exports[`with custom file name 1`] = `
{
  "$schema": "https://json.schemastore.org/tsconfig",
}
`;
